--- a/05-Object Oriented Programming/Excercise/01-Object Oriented Programming.ipynb
+++ b/05-Object Oriented Programming/Excercise/01-Object Oriented Programming.ipynb
@@ -1371,31 +1371,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class animal:\n",
-    "    def __init__(self, name):\n",
-    "        print(f\"You have entered name for the object animal: {name}\")\n",
+    "class Animal:\n",
+    "    def __init__(self):\n",
+    "        print(f\"Animal created\")\n",
     "    def WhoAmI(self):\n",
-    "        print(f\"I am eating\")\n",
+    "        print(f\"I am Animal\")\n",
     "    def Eat(self):\n",
     "        print(\"I am eating\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Animal created\n"
+     ]
+    }
+   ],
    "source": [
-    "#dog = animal(\"dog\")"
+    "dog = animal()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am Animal\n"
+     ]
+    }
+   ],
+   "source": [
+    "dog.WhoAmI()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1407,40 +1432,57 @@
     }
    ],
    "source": [
-    "dog.WhoAmI()"
+    "dog.Eat()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#################################\n",
+    "#Testing the inheritance\n",
+    "############################\\\n",
+    "\n",
+    "class dog(Animal):\n",
+    "    def __init__(self):\n",
+    "        Animal.__init__(self)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Inheritane tesing. \n",
-    "class Dog:\n",
-    "    def __init__(self):\n",
-    "        animal.__init__(self)"
+    "# class Dog:\n",
+    "#     def __init__(self):\n",
+    "#         animal.__init__(self)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Dog.__init__() takes 1 positional argument but 2 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [27]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m testdog \u001b[38;5;241m=\u001b[39m \u001b[43mDog\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mmydog\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mTypeError\u001b[0m: Dog.__init__() takes 1 positional argument but 2 were given"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Animal created\n",
+      "I am eating\n",
+      "I am Animal\n"
      ]
     }
    ],
    "source": [
-    "testdog = Dog(\"mydog\")\n"
+    "testdogclass = dog()\n",
+    "testdogclass.Eat()\n",
+    "testdogclass.WhoAmI()\n",
+    "\n"
    ]
   },
   {
