--- a/05-Object Oriented Programming/Excercise/04-OOP Challenge.ipynb
+++ b/05-Object Oriented Programming/Excercise/04-OOP Challenge.ipynb
@@ -639,7 +639,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -654,6 +654,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "377b85fccf01b1fe6a959144825e6c17ac3718c2615da119d71a1f46ada91329"
+   }
   }
  },
  "nbformat": 4,
