--- a/11-Python Generators/Excercise/01-Iterators and Generators.ipynb
+++ b/11-Python Generators/Excercise/01-Iterators and Generators.ipynb
@@ -141,11 +141,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gencubes(n):\n",
+    "def gencubess(n):\n",
     "    output = []\n",
     "    for x in range(n):\n",
     "        #output.append(x**3)\n",
