--- a/Notes.ipynb
+++ b/Notes.ipynb
@@ -10,6 +10,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "27d25cda",
+   "metadata": {},
+   "source": [
+    "### Corey Schafer\n",
+    "\n",
+    "Python Tutorials\n",
+    "143 videos5,148,468 viewsLast updated on 28 Sept 2020\n",
+    "https://www.youtube.com/playlist?list=PL-osiE80TeTt2d9bfVyTiXJA-UTHn6WwU\n",
+    "\n",
+    "Corey Schafer\n",
+    "961K subscribers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cd762f0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "c092465c",
    "metadata": {
     "heading_collapsed": true
@@ -17,6 +40,16 @@
    "source": [
     "### Navin Reddy Github\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69ec0adf",
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -43,7 +76,9 @@
   {
    "cell_type": "markdown",
    "id": "96a27227",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# CONFIGURE JUPYTER NOTEBOOK:"
    ]
@@ -51,7 +86,9 @@
   {
    "cell_type": "markdown",
    "id": "d9aaa8ec",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Installing jupyter over command line"
    ]
@@ -60,7 +97,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "35b04b03",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "https://www.geeksforgeeks.org/how-to-install-jupyter-notebook-in-windows/\n",
@@ -103,7 +142,9 @@
   {
    "cell_type": "markdown",
    "id": "5e4e53bf",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Jupyter cell expand and collapse utility (notebook extensions)"
    ]
@@ -111,7 +152,9 @@
   {
    "cell_type": "markdown",
    "id": "c465a2a2",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "https://www.youtube.com/watch?v=B9tC5ggKEUc&t=138s\n",
     " \n",
@@ -129,7 +172,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e99660b4",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   }
